# actix-angular-project-template

./: .env  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: build-docker.yml
api/: .dockerignore  .env  .env.docker  Cargo.toml  Dockerfile  configuration-prod.yaml  configuration.yaml  run.sh  rustfmt.toml  sqlx-data.json
api/migrations/: 20240412194055_db_init.sql.sql
api/src/: lib.rs  main.rs  server.rs
api/src/config/: app_settings.rs  logging.rs  mod.rs
api/src/domain/: user.rs
api/src/middleware/: auth.rs
api/src/model/: request.rs  response.rs
api/src/route/: actuator.rs  auth.rs  mod.rs
api/src/service/: authentication.rs  mod.rs  registration.rs
ui/: Dockerfile  README.md  angular.json  package-lock.json  package.json
ui/src/: index.html  styles.scss
ui/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
ui/src/app/main/: main.module.ts
ui/src/app/main/admin-home/: admin-home.component.spec.ts  admin-home.component.ts
ui/src/app/main/auth/login/: login.component.html  login.component.ts
ui/src/app/main/auth/register/: register.component.html  (+1 more)
ui/src/app/main/user-home/: user-home.component.spec.ts  user-home.component.ts
ui/src/app/shared/: shared.module.ts
ui/src/app/shared/guard/: auth.guard.ts
ui/src/app/shared/interceptor/: auth.interceptor.ts
ui/src/app/shared/model/: auth.model.ts
ui/src/app/shared/service/: actuator.services.ts  auth.service.ts  security.service.ts  theme.service.ts
ui/src/assets/i18n/: en.json
ui/src/environments/: environment.ts
(+6 files in other folders)
